--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scroll Triger Animation</title>
+    <title>Scroll Trigger Animation</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <style>
@@ -25,90 +25,84 @@
 <body>
     <main class="w-full flex text-white text-center flex-col gap-4 items-center py-[15vh]">
         <!-- Card 1  -->
-
         <div
-            class="card1 card flex flex-col sticky top-[15vh] gap-4 w-[27vw] py[15vh] px-[20px] items-center bg-[#2e251e] p-20 rounded-[25px]">
-            <img src="/img/1.png" class="w-[180px] aspect-square" alt="Card 1" />
-            <h1 class="text-4xl font-thin">
+            class="card1 card flex flex-col sticky top-[15vh] gap-4 w-[80vw] md:w-[40vw] lg:w-[27vw] py-[15vh] px-[20px] items-center bg-[#2e251e] p-10 md:p-16 lg:p-20 rounded-[25px]">
+            <img src="img/1.png" class="w-[120px] md:w-[140px] lg:w-[180px] aspect-square" alt="Card 1" />
+            <h1 class="text-2xl md:text-3xl lg:text-4xl font-thin">
                 The <br />
                 <span class="font-bold">ALGORITHM</span>
             </h1>
-            <p>
+            <p class="text-sm md:text-base lg:text-lg">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores,
                 tenetur?
             </p>
         </div>
 
         <!-- Card 2  -->
-
         <div
-            class="card2 card flex flex-col sticky top-[15vh] gap-4 w-[27vw] py[15vh] px-[20px] items-center bg-[#2e251e] p-20 rounded-[25px]">
-            <img src="/img/2.png" class="w-[180px] aspect-square" alt="Card 2" />
-            <h1 class="text-4xl font-thin">
+            class="card2 card flex flex-col sticky top-[15vh] gap-4 w-[80vw] md:w-[40vw] lg:w-[27vw] py-[15vh] px-[20px] items-center bg-[#2e251e] p-10 md:p-16 lg:p-20 rounded-[25px]">
+            <img src="img/2.png" class="w-[120px] md:w-[140px] lg:w-[180px] aspect-square" alt="Card 2" />
+            <h1 class="text-2xl md:text-3xl lg:text-4xl font-thin">
                 The <br />
                 <span class="font-bold">ALGORITHM</span>
             </h1>
-            <p>
+            <p class="text-sm md:text-base lg:text-lg">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores,
                 tenetur?
             </p>
         </div>
 
         <!-- Card 3  -->
-
         <div
-            class="card3 card flex flex-col sticky top-[15vh] gap-4 w-[27vw] py[15vh] px-[20px] items-center bg-[#2e251e] p-20 rounded-[25px]">
-            <img src="/img/3.png" class="w-[180px] aspect-square" alt="Card 3" />
-            <h1 class="text-4xl font-thin">
+            class="card3 card flex flex-col sticky top-[15vh] gap-4 w-[80vw] md:w-[40vw] lg:w-[27vw] py-[15vh] px-[20px] items-center bg-[#2e251e] p-10 md:p-16 lg:p-20 rounded-[25px]">
+            <img src="img/3.png" class="w-[120px] md:w-[140px] lg:w-[180px] aspect-square" alt="Card 3" />
+            <h1 class="text-2xl md:text-3xl lg:text-4xl font-thin">
                 The <br />
                 <span class="font-bold">ALGORITHM</span>
             </h1>
-            <p>
+            <p class="text-sm md:text-base lg:text-lg">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores,
                 tenetur?
             </p>
         </div>
 
         <!-- Card 4  -->
-
         <div
-            class="card4 card flex flex-col sticky top-[15vh] gap-4 w-[27vw] py[15vh] px-[20px] items-center bg-[#2e251e] p-20 rounded-[25px]">
-            <img src="/img/4.png" class="w-[180px] aspect-square" alt="Card 4" />
-            <h1 class="text-4xl font-thin">
+            class="card4 card flex flex-col sticky top-[15vh] gap-4 w-[80vw] md:w-[40vw] lg:w-[27vw] py-[15vh] px-[20px] items-center bg-[#2e251e] p-10 md:p-16 lg:p-20 rounded-[25px]">
+            <img src="img/4.png" class="w-[120px] md:w-[140px] lg:w-[180px] aspect-square" alt="Card 4" />
+            <h1 class="text-2xl md:text-3xl lg:text-4xl font-thin">
                 The <br />
                 <span class="font-bold">ALGORITHM</span>
             </h1>
-            <p>
+            <p class="text-sm md:text-base lg:text-lg">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores,
                 tenetur?
             </p>
         </div>
 
         <!-- Card 5  -->
-
         <div
-            class="card5 card flex flex-col sticky top-[15vh] gap-4 w-[27vw] py[15vh] px-[20px] items-center bg-[#2e251e] p-20 rounded-[25px]">
-            <img src="/img/5.png" class="w-[180px] aspect-square" alt="Card 5" />
-            <h1 class="text-4xl font-thin">
+            class="card5 card flex flex-col sticky top-[15vh] gap-4 w-[80vw] md:w-[40vw] lg:w-[27vw] py-[15vh] px-[20px] items-center bg-[#2e251e] p-10 md:p-16 lg:p-20 rounded-[25px]">
+            <img src="img/5.png" class="w-[120px] md:w-[140px] lg:w-[180px] aspect-square" alt="Card 5" />
+            <h1 class="text-2xl md:text-3xl lg:text-4xl font-thin">
                 The <br />
                 <span class="font-bold">ALGORITHM</span>
             </h1>
-            <p>
+            <p class="text-sm md:text-base lg:text-lg">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores,
                 tenetur?
             </p>
         </div>
 
         <!-- Card 6  -->
-
         <div
-            class="card6 card flex flex-col sticky top-[15vh] gap-4 w-[27vw] py[15vh] px-[20px] items-center bg-[#2e251e] p-20 rounded-[25px]">
-            <img src="/img/6.png" class="w-[180px] aspect-square" alt="Card 6" />
-            <h1 class="text-4xl font-thin">
+            class="card6 card flex flex-col sticky top-[15vh] gap-4 w-[80vw] md:w-[40vw] lg:w-[27vw] py-[15vh] px-[20px] items-center bg-[#2e251e] p-10 md:p-16 lg:p-20 rounded-[25px]">
+            <img src="img/6.png" class="w-[120px] md:w-[140px] lg:w-[180px] aspect-square" alt="Card 6" />
+            <h1 class="text-2xl md:text-3xl lg:text-4xl font-thin">
                 The <br />
                 <span class="font-bold">ALGORITHM</span>
             </h1>
-            <p>
+            <p class="text-sm md:text-base lg:text-lg">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores,
                 tenetur?
             </p>
